[package]
name = "Expriment"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "main"

[dependencies]
anyhow = "1.0.44"
clap = "3.0.0-beta.4"
dotenv = "0.15.0"
lettre = "0.10.0-rc.3"